--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "obez",
-  "version": "0.0.1",
+  "name": "bis",
+  "version": "0.0.2",
   "description": "Creer une liste de favoris de fichier à télécharger.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:obeza/colibri.git"
   },
   "keywords": [
     "fichier",
     "favoris"
   ],
   "author": "Olivier Bezaudin <o.bezaudin@gmail.com> (https://github.com/obeza)",
-  "license": "ISC",
+  "license": "MIT",
   "preferGlobal": true,
   "bin": {
-    "obez": "index.js"
+    "bis": "index.js"
   },
   "dependencies": {
     "cli-storage": "0.0.1",
-    "download": "^4.1.4"
+    "download": "^4.1.4",
+    "prompt": "^0.2.14""
   }
 }
